Tests: unit tests of all services