@@ -1,7 +1,6 @@
 package com.gestao.financas;
 
 import com.gestao.financas.entity.Alert;
-import com.gestao.financas.entity.Category;
 import com.gestao.financas.entity.Transaction;
 import com.gestao.financas.entity.User;
 import com.gestao.financas.repository.AlertRepository;
@@ -10,9 +9,7 @@ import com.gestao.financas.service.AlertService;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.ArgumentCaptor;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
@@ -25,114 +22,84 @@ import static org.mockito.Mockito.*;
 
 class AlertServiceTest {
 
-    @Mock
     private AlertRepository alertRepository;
-
-    @Mock
     private TransactionRepository transactionRepository;
-
-    @InjectMocks
     private AlertService alertService;
-
-    private User user;
-    private Category category;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-        user = new User();
-        user.setId(1L);
-
-        category = new Category();
-        category.setId(1L);
-        category.setName("Alimentação");
+        alertRepository = mock(AlertRepository.class);
+        transactionRepository = mock(TransactionRepository.class);
+        alertService = new AlertService(alertRepository, transactionRepository);
     }
 
     @Test
-    void testCheckAndCreateAlert_ExpenseAboveAverage() {
+    void checkAndCreateAlert_expenseAboveAverage_createsWarningAlert() {
+        User user = new User();
+        user.setId(1L);
+
         Transaction transaction = new Transaction();
         transaction.setUser(user);
         transaction.setType("expense");
-        transaction.setCategory(category);
-        transaction.setAmount(new BigDecimal("300"));
+        transaction.setCategory("Food");
+        transaction.setAmount(BigDecimal.valueOf(200));
 
-        Transaction recent1 = new Transaction();
-        recent1.setType("expense");
-        recent1.setCategory(category);
-        recent1.setAmount(new BigDecimal("100"));
-        recent1.setUser(user);
+        Transaction previous = new Transaction();
+        previous.setUser(user);
+        previous.setType("expense");
+        previous.setCategory("Food");
+        previous.setAmount(BigDecimal.valueOf(100));
 
-        Transaction recent2 = new Transaction();
-        recent2.setType("expense");
-        recent2.setCategory(category);
-        recent2.setAmount(new BigDecimal("100"));
-        recent2.setUser(user);
-
-        when(transactionRepository.findByUserAndPeriod(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class)))
-                .thenReturn(Arrays.asList(recent1, recent2));
+        when(transactionRepository.findByUserAndPeriod(eq(1L), any(), any()))
+                .thenReturn(List.of(previous));
 
         alertService.checkAndCreateAlert(transaction);
 
-        verify(alertRepository, times(1)).save(any(Alert.class));
+        ArgumentCaptor<Alert> captor = ArgumentCaptor.forClass(Alert.class);
+        verify(alertRepository, times(1)).save(captor.capture());
+
+        Alert savedAlert = captor.getValue();
+        assertEquals("WARNING", savedAlert.getType());
+        assertTrue(savedAlert.getMessage().contains("Food"));
+        assertEquals(user, savedAlert.getUser());
     }
 
     @Test
-    void testCheckAndCreateAlert_IncomeBelowAverage() {
+    void checkAndCreateAlert_incomeBelowAverage_createsInfoAlert() {
+        User user = new User();
+        user.setId(1L);
+
         Transaction transaction = new Transaction();
         transaction.setUser(user);
         transaction.setType("income");
-        transaction.setCategory(category);
-        transaction.setAmount(new BigDecimal("30"));
+        transaction.setCategory("Salary");
+        transaction.setAmount(BigDecimal.valueOf(400));
 
-        Transaction recent1 = new Transaction();
-        recent1.setType("income");
-        recent1.setCategory(category);
-        recent1.setAmount(new BigDecimal("100"));
-        recent1.setUser(user);
+        Transaction previous = new Transaction();
+        previous.setUser(user);
+        previous.setType("income");
+        previous.setCategory("Salary");
+        previous.setAmount(BigDecimal.valueOf(1000));
 
-        Transaction recent2 = new Transaction();
-        recent2.setType("income");
-        recent2.setCategory(category);
-        recent2.setAmount(new BigDecimal("100"));
-        recent2.setUser(user);
-
-        when(transactionRepository.findByUserAndPeriod(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class)))
-                .thenReturn(Arrays.asList(recent1, recent2));
+        when(transactionRepository.findByUserAndPeriod(eq(1L), any(), any()))
+                .thenReturn(List.of(previous));
 
         alertService.checkAndCreateAlert(transaction);
 
-        verify(alertRepository, times(1)).save(any(Alert.class));
+        ArgumentCaptor<Alert> captor = ArgumentCaptor.forClass(Alert.class);
+        verify(alertRepository, times(1)).save(captor.capture());
+
+        Alert savedAlert = captor.getValue();
+        assertEquals("INFO", savedAlert.getType());
+        assertTrue(savedAlert.getMessage().contains("Salary"));
+        assertEquals(user, savedAlert.getUser());
     }
 
     @Test
-    void testCheckAndCreateAlert_NoAlert() {
-        Transaction transaction = new Transaction();
-        transaction.setUser(user);
-        transaction.setType("expense");
-        transaction.setCategory(category);
-        transaction.setAmount(new BigDecimal("50"));
-
-        Transaction recent = new Transaction();
-        recent.setType("expense");
-        recent.setCategory(category);
-        recent.setAmount(new BigDecimal("100"));
-        recent.setUser(user);
-
-        when(transactionRepository.findByUserAndPeriod(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class)))
-                .thenReturn(Arrays.asList(recent));
-
-        alertService.checkAndCreateAlert(transaction);
-
-        verify(alertRepository, never()).save(any(Alert.class));
-    }
-
-    @Test
-    void testGetUnreadAlerts() {
+    void getUnreadAlerts_returnsAlerts() {
         Alert alert1 = new Alert();
         Alert alert2 = new Alert();
-        List<Alert> alerts = Arrays.asList(alert1, alert2);
-
-        when(alertRepository.findByUserIdAndReadFalse(1L)).thenReturn(alerts);
+        when(alertRepository.findByUserIdAndReadFalse(1L)).thenReturn(Arrays.asList(alert1, alert2));
 
         List<Alert> result = alertService.getUnreadAlerts(1L);
 
@@ -141,13 +108,11 @@ class AlertServiceTest {
     }
 
     @Test
-    void testMarkAsRead() {
+    void markAsRead_setsReadTrue() {
         Alert alert = new Alert();
-        alert.setId(1L);
         alert.setRead(false);
 
         when(alertRepository.findById(1L)).thenReturn(Optional.of(alert));
-        when(alertRepository.save(alert)).thenReturn(alert);
 
         alertService.markAsRead(1L);
 
@@ -156,13 +121,13 @@ class AlertServiceTest {
     }
 
     @Test
-    void testMarkAsRead_AlertNotFound() {
-        when(alertRepository.findById(99L)).thenReturn(Optional.empty());
+    void markAsRead_alertNotFound_throwsException() {
+        when(alertRepository.findById(1L)).thenReturn(Optional.empty());
 
-        RuntimeException exception = assertThrows(RuntimeException.class, () ->
-                alertService.markAsRead(99L));
-
-        assertEquals("Alerta não encontrado com ID: 99", exception.getMessage());
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> alertService.markAsRead(1L));
+        assertTrue(exception.getMessage().contains("Alerta não encontrado"));
     }
 }
+
+
 
